# druid

./: .gitignore  LICENSE  README.md
Druid/: CMakeLists.txt  README  setup.sh  setup.sh.in
Druid-2.4/: CMakeLists.txt  setup_wsl.sh
Druid-2.4/geometryfile/: Geo.C  TBCern0707.root  clic_sid_cdr_b.root  geom_full_det.root  ild_AHCAL.root  ild_DHCAL.root  sid.root  small_geom.root
Druid-2.4/geometryfile/ILD_V2/: Geo.C  ild_o2_v05.root  ild_o2_v06.root
Druid-2.4/include/: MultiView.hh  geometry.h  segment3.h  trajectory.h
Druid-2.4/src/: BuildGeo.cc  CaloHits.cc  ClusterHits.cc  EventNavigator.cc  GNUmakefile  TrackAssignedHits.cc  Vertex.cc  trajectory.cc
Druid/geometryfile/: 1500.root  CLIC_ILD_CDR.root  CLIC_SID_CDR.root  DESY_geom.root  ShortTPC.root  ShortYoke.root  TBDesy0506.root  geom_SDHCAL.root
Druid/geometryfile/ILD_V2/: Geo_ild_TPC.macro  ild_o2_v05_TPC1365.root  ild_o2_v05_TPC1400.root  ild_o2_v06_TPC1365.root  ild_o2_v06_TPC1400.root
Druid/include/: EventNavigator.hh  GlobalDefs.hh  Options.h  fitting_root.h  point.h
Druid/src/: BuildMCParticles.cc  BuildPFOs.cc  CaloHits.cc  Connect.cc  Druid.cc  EventNavigator.cc  GUI.cc  LinkDef.h  MultiView.cc  Options.cc  RecoJets.cc  TrackerHits.cc  fitting_root.cc  geometry.cc  loadevent.cc  point.cc  segment3.cc
LCIO/: pom.xml
LCIO/config/: lcio.properties
LCIO/doc/: index.html  lcio.xml
LCIO/src/aid/EVENT/: LCIO.aid
LCIO/src/cpp/include/: lcio.h
LCIO/src/cpp/include/pre-generated/EVENT/: LCIO.h
LCIO/src/latex/manual/: manual.tex
